docs/errors/examples/catch-after-catch-all/catch-after-catch-all.expected.txt
error[E2205]: `catch` after catch-all
  --> catch-after-catch-all.grob:7:3
   |
 7 | } catch (e: IoError) {
   |   ^^^^^
   |
   = note: the bare `catch e` on line 5 matches any error; this clause can never be reached
   = help: place typed `catch` clauses before the bare `catch` catch-all
